# app/routes/v1/__init__.py
@@ -1,0 +1,17 @@
+# app/routes/v1/__init__.py
+
+from . import (
+    selic,
+    ipca,
+    cdi,
+    ibov,
+    sp500,
+    usdbrl,
+    treasury,
+    users,
+    token,
+    me,
+    infomoney,
+    protected,
+    status,
+)
